--- a/index.html
+++ b/index.html
@@ -6,6 +6,64 @@
 	<title>privacy policy</title>
 </head>
 <body>
-	<h1>Welcome App dev zone</h1>
+	<h1>Privacy Policy:</h1>
+	<p>
+	Please read the privacy policy with precision before you start to use the application that we provide. Our application is secure and safe to use. You can access our app at the smartest. (Acquire our policy app today. Before you agree to terms and conditions, it is your right to know. You can agree to the terms of this privacy policy over MJ Technologies by the terms ("we", "our", or us"). We are pleased to proffer you access to MJ Screen Recorder with all the convenience right away! We have set forth this privacy policy and hence set forth the terms of compliance that we may provide you.		
+	</p>
+	<h1>Collection of User Information</h1>
+	<p>
+		We have developed the app to facilitate our users and categorically want to clear that we are not asking for any identifying information from users. You are not bound to get registered to use the smart features of this pristine app.
+	</p>
+	<p>
+		The application may collect some certain non-personal information in an automated way! We do not collect any intrinsic or precise information about the location of your mobile phone too. The information that it collects is the type of mobile device, its operating system, your network service provider, IP Address of your smartphone devices. We aren't collecting, sending or sharing any of your images and videos or content created by the user. 
+	</p>
+	<p>
+		Permissions required for the app's first-rate functionality:
+		We provide you with complete expediency as our app only requires the permissions needed to run the app's operations smoothly. MJ Screen recorder is ultimately facilitating you with the user-friendly functionality.   Some of the necessary permission that accounts for proper functionality of the screen recorder include.
+	</p>
+	<ul> 
+		<li>Camera Permission</li>
+		<li>Audio recording</li>
+		<li>Write storage</li>
+
+		<li>Read storage</li>		
+	</ul>
+	
+
+	<h1>Camera Permission</h1>
+	<p>
+		To record video while the screen recorder is on, whether from the front or back camera.
+
+	</p>
+	<h1>Audio Recording:</h1>
+	<p>
+		To record the audio of the screen or also add up the mic sound.
+	</p>
+
+	<h1>Write storage:</h1>
+	<p>For the purpose of saving the recorded screen file, write storage permission is needed.</p>
+
+
+	<h1>Read Storage:</h1>
+	<p>	It is to fetch previously saved file format and to trim it with convenience </p>
+
+	<h1>Security Preferences:</h1>
+	<p>We always prefer to secure our user's information, and for this, your all information gets stored on your own server. We take prior steps to keep your privacy ensured, and for that, we always make our application more secure and safe to be used. We help you to get rid of all the potential security threats. </p>
+	<h1>Contact us:</h1>
+	<p>If any queries are still not addressed, you can feel free to reach us and ask your questions about the app practices. Feel free to leave an email related to any further questions you may have according to the MJ Screen Recorder functionality.</p>
+
+		
+		
+		
+		
+		
+	
+		
+		
+		
+		
+	
+
+
 </body>
 </html>
