--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<p>	It is to fetch previously saved file format and to trim it with convenience </p>
 
 	<h1>Security Preferences:</h1>
-	<p>We always prefer to secure our user's information, and for this, your all information gets stored on your own server. We take prior steps to keep your privacy ensured, and for that, we always make our application more secure and safe to be used. We help you to get rid of all the potential security threats. </p>
+	<p>It is always our preference to secure user's information and for this purpose, the user's information is stored on their own server.</p>
 	<h1>Contact us:</h1>
 	<p>If any queries are still not addressed, you can feel free to reach us and ask your questions about the app practices. Feel free to leave an email related to any further questions you may have according to the MJ Screen Recorder functionality.</p>
 
