--- a/pdfconverter.html
+++ b/pdfconverter.html
@@ -1,46 +1,27 @@
-<h2 dir="ltr"><strong>PDF Converter &gt; Privacy Policy</strong></h2>
+<div style="padding:20px">
+<h2 dir="ltr"><span style="font-size:22px"><strong>PDF Converter &gt; Privacy Policy</strong></span></h2>
 
 <p>&nbsp;</p>
 
-<h2 dir="ltr"><strong>We place a high value on your privacy:</strong></h2>
+<h2 dir="ltr"><span style="font-size:22px"><strong>We place a high value on your privacy:</strong></span></h2>
 
-<p dir="ltr"><strong>PDF Converter&#39;s policy is to protect your privacy for any information we may gain while operating our Application. We value your privacy and are committed to safeguarding any personally identifiable information you submit to us over the App.&nbsp;</strong></p>
+<p dir="ltr"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif">PDF Converter&#39;s policy is to protect your privacy for any information we may gain while operating our Application. We value your privacy and are committed to safeguarding any personally identifiable information you submit to us over the App.&nbsp;</span></span></p>
 
-<p dir="ltr"><strong>&nbsp;</strong></p>
+<p dir="ltr"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif">We at PDF Converter have created this privacy policy (&quot;Privacy Policy&quot;) to describe what information may be collected on our App. How we use this information, and when we may release it to third parties. This Privacy Policy only applies to information we collect through the Website and does not extend to information we gather from other sources.&nbsp;</span></span></p>
 
-<p dir="ltr"><strong>We at PDF Converter have created this privacy policy (&quot;Privacy Policy&quot;) to describe what information may be collected on our App. How we use this information, and when we may release it to third parties. This Privacy Policy only applies to information we collect through the Website and does not extend to information we gather from other sources.</strong></p>
+<p dir="ltr"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif">The Privacy Policy outlines the privacy guidelines that apply to all data gathered. Or provided when accessing, configuring, or using Pdf Converter Services. Suppose you continue to use the Application and our Pdf Converter services. If you disagree with the terms of this Privacy Policy, please do not use our Services.</span></span></p>
 
-<p dir="ltr"><strong>&nbsp;</strong></p>
+<p dir="ltr"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif">Our guiding philosophy for data collection is to gain only the information required to run a Pdf Converter app on the scale. This privacy policy applies to the services provided by the Pdf Converter application.</span></span></p>
 
-<p dir="ltr"><strong>The Privacy Policy outlines the privacy guidelines that apply to all data gathered. Or provided when accessing, configuring, or using Pdf Converter Services. Suppose you continue to use the Application and our Pdf Converter services. If you disagree with the terms of this Privacy Policy, please do not use our Services.</strong></p>
+<p><span style="font-size:22px"><strong>Information classification</strong></span></p>
 
-<p dir="ltr"><strong>&nbsp;</strong></p>
+<p><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif">Depending on whether a person&#39;s identity can be recognised, we categorize user information into the following two major types.</span></span></p>
 
-<p dir="ltr"><strong>Our guiding philosophy for data collection is to gain only the information required to run a Pdf Converter app on the scale. This privacy policy applies to the services provided by the Pdf Converter application.</strong></p>
+<p><span style="font-size:22px"><strong>PERSONAL INFORMATION COLLECTION AND USE</strong></span></p>
 
-<p>&nbsp;</p>
+<p><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif">Since the application does not require registration or logging in, we do not collect any personal data like name, email address, or date of birth. You Have to give access to your Gallery because Pdf Converter is downloading files to your device.</span></span></p>
 
-<h2 dir="ltr"><strong>Information classification</strong></h2>
+<p><span style="font-size:22px"><strong>Contact Us</strong></span></p>
 
-<p>&nbsp;</p>
-
-<p dir="ltr"><strong>Depending on whether a person&#39;s identity can be recognised, we categorize user information into the following two major types.</strong></p>
-
-<p>&nbsp;</p>
-
-<p dir="ltr"><strong>PERSONAL INFORMATION COLLECTION AND USE</strong></p>
-
-<p>&nbsp;</p>
-
-<p dir="ltr"><strong>Since the application does not require registration or logging in, we do not collect any personal data like name, email address, or date of birth. You Have to give access to your Gallery because Pdf Converter is downloading files to your device.</strong></p>
-
-<p><br />
-&nbsp;</p>
-
-<p dir="ltr"><strong>&nbsp;</strong></p>
-
-<h2 dir="ltr"><strong>Contact Us</strong></h2>
-
-<h2 dir="ltr"><strong>&nbsp;</strong></h2>
-
-<p dir="ltr"><strong>Our Company understands how important your privacy is to you. If you have questions about our policy, don&#39;t hesitate to contact us. Our Company keeps the right to change this Privacy Statement at any moment. Send an email to mjtechnologies555@gmail.com with the subject &quot;Privacy Policy Issue&quot; if you have any questions about our privacy policy.</strong></p>
+<h2 dir="ltr"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif">Our Company understands how important your privacy is to you. If you have questions about our policy, don&#39;t hesitate to contact us. Our Company keeps the right to change this Privacy Statement at any moment. Send an email to mjtechnologies555@gmail.com with the subject &quot;Privacy Policy Issue&quot; if you have any questions about our privacy policy.</span></span></h2>
+</div>
