--- a/pdfconverter.html
+++ b/pdfconverter.html
@@ -1,5 +1,8 @@
 <div style="padding:20px">
-<h2 dir="ltr"><span style="font-size:22px"><strong>PDF Converter &gt; Privacy Policy</strong></span></h2>
+	<center>
+		<h2 dir="ltr"><span style="font-size:22px"><strong>PDF Converter &gt; Privacy Policy</strong></span></h2>	
+	</center>
+
 
 <p>&nbsp;</p>
 
@@ -23,5 +26,5 @@
 
 <p><span style="font-size:22px"><strong>Contact Us</strong></span></p>
 
-<h2 dir="ltr"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif">Our Company understands how important your privacy is to you. If you have questions about our policy, don&#39;t hesitate to contact us. Our Company keeps the right to change this Privacy Statement at any moment. Send an email to mjtechnologies555@gmail.com with the subject &quot;Privacy Policy Issue&quot; if you have any questions about our privacy policy.</span></span></h2>
+<span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif">Our Company understands how important your privacy is to you. If you have questions about our policy, don&#39;t hesitate to contact us. Our Company keeps the right to change this Privacy Statement at any moment. Send an email to mjtechnologies555@gmail.com with the subject &quot;Privacy Policy Issue&quot; if you have any questions about our privacy policy.</span></span>
 </div>
